# agno-modal-deploy

./: .example.env  .gitignore  README.md  agno_modal_deploy.py  agno_modal_deploy_agui.py  financial_agent_app.py  pyproject.toml  requirements.txt
agno_agents/: README.md  __init__.py  financial_agent_agui_app.py  financial_agent_app.py  financial_agent_app_function_agent.py  financial_agent_app_function_fastapi.py  financial_agent_app_multiple_patterns.py  financial_agent_app_variable_agent.py  financial_agent_app_variable_fastapi.py  multi_agent_app_function_fastapi.py  multi_agent_app_variable_fastapi.py
media/: README.md
